--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,12 +1,12 @@
-.wpdb-crud-wrap table tr th:first-child {
+.wpdb-crud-wrap form table tr th:first-child {
 	text-align: right;
 	width: 100px;
 }
 
-.wpdb-crud-wrap table tr td:last-child {
+.wpdb-crud-wrap form table tr td:last-child {
 	min-width: 300px;
 }
 
-.wpdb-crud-wrap table input {
+.wpdb-crud-wrap form table input {
 	width: 100%;
 }
